--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "chart.js": "^3.8.0",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rotmg-utils": "github:haizor/rotmg-utils",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/react-color": "^3.0.6"
   }
 }
