--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.5",
     "chart.js": "^3.8.0",
     "lodash": "^4.17.21",
+    "object-hash": "^3.0.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.2.0",
     "react-color": "^2.19.3",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/object-hash": "^2.2.1",
     "@types/react-color": "^3.0.6"
   }
 }
