--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@haizor/rotmg-utils": "^1.1.12",
+    "@haizor/rotmg-utils": "^1.2.3",
     "@react-spring/web": "^9.4.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "chart.js": "^3.8.0",
+    "jszip": "^3.7.1",
     "lodash": "^4.17.21",
     "object-hash": "^3.0.0",
     "react": "^18.1.0",
